--- a/backend/package.json
+++ b/backend/package.json
@@ -13,17 +13,25 @@
   "description": "",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jest": "^29.7.0",
     "joi": "^17.13.3",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.0",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.16.0",
-    "socket.io": "^4.8.1"
+    "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   }
 }
