--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.10.0",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.16.0",
+    "polyline": "^0.2.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "socket.io": "^4.8.1",
