--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "frontend",
+  "name": "driver-route-management-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "build:css": "postcss src/styles/tailwind.css -o src/styles/output.css"
+    "format": "prettier --write \"src/**/*.{js,jsx}\""
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@types/styled-components": "^5.1.34",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.6",
+    "vite": "^5.0.8"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@react-google-maps/api": "^2.20.6",
-    "@react-leaflet/core": "^3.0.0",
-    "@react-pdf/renderer": "^4.3.0",
-    "@reduxjs/toolkit": "^2.6.1",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.8.4",
-    "bootstrap": "^5.3.3",
-    "dotenv": "^16.4.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
     "emailjs-com": "^3.2.0",
-    "jwt-decode": "^4.0.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "leaflet": "^1.9.4",
-    "pdf-lib": "^1.17.1",
-    "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
-    "react-error-boundary": "^5.0.0",
-    "react-hook-form": "^7.54.2",
+    "react": "^18.2.0",
+    "react-datepicker": "^8.3.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.3.0",
+    "react-leaflet": "^4.2.1",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^7.5.2",
     "react-toastify": "^11.0.5",
-    "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.16"
+    "recharts": "^2.15.3",
+    "styled-components": "^6.1.17",
+    "xlsx": "^0.18.5",
+    "yup": "^1.3.3"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
